# 6809Emu

./: .gitattributes  .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  vite.config.ts
.commandcode/design/: smell-report.html  smell-report.md
.github/workflows/: ci.yml  release.yml
agent-tools/: 6aed7dc3-ca26-4f3b-993b-3dd7e1c76d50.txt  74246259-d151-421c-b0c5-26a9ee9f0d51.txt
crates/m6809-asm/: Cargo.toml
crates/m6809-asm/src/: lib.rs
crates/m6809-core/: Cargo.toml
crates/m6809-core/src/: addressing.rs  alu.rs  cpu.rs  emulator.rs  flags.rs  hd6309.rs  io_map.rs  lib.rs  memory.rs  types.rs  undoc.rs
crates/m6809-core/tests/: functional_test.rs  integration.rs  mame_vectors.rs  undocumented_opcodes.rs
crates/m6809-machine/: Cargo.toml
crates/m6809-machine/src/: ay38910.rs  basic_rom.rs  board_pia.rs  coco2.rs  coco2_rom.rs  dragon32.rs  dragon_rom.rs  keyboard.rs  lib.rs  machine_io.rs  mc6850.rs  pia6821.rs  sam.rs  vdg.rs  video.rs
scripts/: fetch-roms.ps1  free-port.js  release.ps1  release.sh  tauri-cli.js  tauri-dev.js
src/: App.svelte  app.css  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs
src/lib/: api.ts  asm.ts  examples.ts  format.ts  icons.ts  layout.ts  shortcuts.ts  theme.ts  toast.ts  types.ts
src/lib/codemirror/: asm-highlight.ts  asm-theme.ts  create-editor.ts
src/lib/components/: AppHeader.svelte  AsmEditor.svelte  AyPanel.svelte  EmptyState.svelte  (+21 more)
terminals/: 1.txt  2.txt  3.txt  4.txt  5.txt  6.txt
(+3 files in other folders)
