[workspace]
resolver = "2"
members = [
    "crates/m6809-core",
    "crates/m6809-asm",
    "crates/m6809-machine",
    "src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
bitflags = "2"
log = "0.4"