[package]
name = "m6809-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
bitflags = { workspace = true, features = ["serde"] }
thiserror = { workspace = true }
log = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }